# NexusVault

./: .dockerignore  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  COMMERCIALIZATION_PLAN.md  COMMERCIALIZATION_PLAN_RAW.md  CONTRIBUTING.md  ISSUES.md  README.md  START_SYSTEM.sh  UNIVERSAL-AGENT.md  clean_git.sh  codex-auto-fix.yml  create_database.sql  docker-compose.yml  gemini_review.txt
.claude/: ecc-tools.json  (+1 more)
.superpowers/inline-neuromorphic/frontend/src-tauri/: Cargo.toml  tauri.conf.json
backend/: .env.example  BACKEND_TECH_STACK_AUDIT.md  Cargo.lock.backup  Cargo.toml  Cargo.toml.bak  Dockerfile  ENGINEERING_PLAYBOOK.md  OPTIMIZATION_SUMMARY.md  build.rs  file_storage.dump
backend/.cargo/: config.toml
backend/docs/: API_AND_CACHING_SELF_CHECK.md  BACKEND_IMPROVEMENTS.md  CONFIG_AND_LIMITS.md  ENGINEERING_PLAYBOOK.md  IMPROVEMENTS.md  POSTGRES_OPTIMIZATION.md  README.md  REFACTORING.md  TOP_TECH.md  UPLOAD_API.md  top-tech.md
backend/migrations/: 001_create_users_table.sql  002_create_files_table.sql  004_add_storage_quota.sql  005_create_file_shares_table.sql  006_create_api_tokens_table.sql  008_create_upload_sessions.sql  011_add_search_index.sql  012_add_content_sha256_to_files.sql  014_create_background_tasks.sql  016_add_query_performance_indexes.sql  017_create_file_versions_table.sql  019_add_files_unique_constraint.sql  020_enable_pg_stat_statements.sql  021_add_background_tasks_scheduling.sql  022_add_files_keyset_indexes.sql  023_add_token_prefix_to_api_tokens.sql  025_background_tasks_active_dedupe_unique.sql  026_create_uq_background_tasks_active_dedupe_concurrently.sql  028_create_idx_background_tasks_ready_concurrently.sql  029_drop_idx_background_tasks_ready.sql  031_drop_idx_background_tasks_locked_until.sql  032_create_idx_files_embedding_concurrently.sql  034_add_files_deleted_at.sql  035_rewrite_active_file_name_unique_indexes.sql  038_add_webdav_lock_api_token_id.sql
backend/scripts/: list_and_fix_missing_files.sh
backend/src/: app.rs  config.rs  constants.rs  lib.rs  main.rs  main.rs.bak  state.rs  tracing.rs
backend/src/api/: admin.rs  api_token.rs  auth.rs  files.rs  folders.rs  mod.rs  oauth_github.rs  oauth_google.rs  openapi.rs  organizations.rs  proxy.rs  share.rs  telemetry.rs  webdav.rs
backend/src/api/webdav/: auth.rs  lock.rs  methods.rs  mod.rs  path.rs  propfind.rs  xml_fragments.rs
backend/src/config/: auth.rs  database.rs  mod.rs  oauth.rs  rate_limit.rs  redis.rs  search.rs  server.rs  storage.rs  tasks.rs
backend/src/database/: pool.rs
backend/src/entities/: api_token.rs  file.rs  folder.rs  mod.rs  organization.rs  share.rs  upload_session.rs  user.rs
backend/src/extractors/: admin.rs  auth.rs  mod.rs
backend/src/handlers/: admin.rs  api_token.rs  auth.rs  files.rs  folders.rs  health.rs  mod.rs  share.rs
backend/src/handlers/files/: batch.rs  categories.rs  chunked_upload.rs  delete.rs  fulltext_search.rs  instant_upload.rs  list.rs  mod.rs  semantic_search.rs  storage.rs  trash.rs  ugoira.rs  upload.rs  versions.rs  video.rs
backend/src/middleware/: auth.rs  cors.rs  metrics.rs  mod.rs  panic.rs  rate_limit.rs  request_log.rs
backend/src/models/: api_token.rs  file.rs  folder.rs  mod.rs  organization.rs  share.rs  ugoira.rs  upload_session.rs  user.rs
backend/src/repositories/: api_tokens.rs  cached_files.rs  file_versions.rs  files.rs  folders.rs  mod.rs  organizations.rs  shares.rs  traits.rs  upload_sessions.rs  users.rs
backend/src/services/: api_token.rs  auth.rs  cache.rs  embeddings.rs  file.rs  file_content_extractor.rs  folder.rs  fulltext_indexer.rs  fulltext_search.rs  maintenance.rs  mod.rs  ocr.rs  organization.rs  redis.rs  share.rs  storage.rs  task_queue.rs  webdav.rs
backend/src/services/auth/: error.rs
backend/src/services/cache/: files.rs  mod.rs
backend/src/services/file/: batch_get.rs  batch_zip.rs  categories.rs  chunked_upload.rs  delete.rs  error.rs  hls.rs  instant_upload.rs  list.rs  mod.rs  quota.rs  read.rs  semantic_search.rs  storage_factory.rs  upload.rs  versions.rs  video.rs
backend/src/services/fulltext_search/: snippet.rs
backend/src/services/ocr/: runtime.rs
backend/src/types/: api_token.rs  file.rs  mod.rs  organization.rs  share.rs  upload_session.rs  user.rs  validation.rs
backend/src/utils/: cache.rs  crypto.rs  error.rs  mime.rs  mod.rs  parse.rs  response.rs  thumbnail.rs  time.rs  validation.rs
backend/tests/: auth_tests.rs  cursor_pagination_tests.rs  fulltext_search_tests.rs  handler_files_trash_tests.rs  handler_files_upload_tests.rs  handler_webdav_tests.rs  middleware_tests.rs  migration_governance_tests.rs  repository_tests.rs  service_auth_tests.rs  service_cache_tests.rs  service_file_tests.rs  service_storage_tests.rs
backend/tests/common/: app.rs  mod.rs
scripts/codex-cli/: AGENTS.md  Cargo.toml
scripts/codex-cli/.claude-plugin/: plugin.json
scripts/codex-cli/docs/: README.md  architecture.md  cli.md  configuration.md  development.md  file-inventory.md  implementation.md  pipeline.md  quality-score.md  troubleshooting.md
scripts/codex-cli/docs/constraints/: README.md  codex-auto-fix-actionable-findings-must-block.md  codex-cli-patch-format.md
scripts/codex-cli/docs/design-docs/: README.md  architecture.md  pipeline.md  security.md
scripts/codex-cli/docs/exec-plans/: 2026-07-02-strict-review-loop-retry.md  auto-fix-patch-reliability.md
scripts/codex-cli/docs/integrations/: github-actions.md
scripts/codex-cli/docs/references/: README.md  auto-review-usage.md  cli.md  configuration.md  development.md  troubleshooting.md
scripts/codex-cli/src/: auto_fix_report.rs  config.rs  lib.rs  llm.rs  main.rs  pipeline.rs  prompts.rs  repo.rs  review_json.rs  review_ledger.rs  runtime.rs  skills.rs  types.rs
scripts/codex-cli/src/patch/: mod.rs  search_replace.rs
scripts/codex-cli/tests/: auto_fix_report.rs  doctor.rs  e2e_auto_fix.rs  gemini_watchdog.rs  patch_search_replace.rs  review_governance_docs.rs  review_ledger.rs  review_to_json.rs  workflow_state.rs
scripts/codex-cli/tools/: review_to_json.sh
(+2054 files in other folders)
