[package]
name = "codex-cli"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "codex"
# 二进制入口迁移至 src/bin/：与 Rust 标准项目结构对齐，并把可复用逻辑下沉到 src/lib.rs（便于技能编排模块化与测试）
path = "src/bin/codex.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.86"
